--- a/StarProject/Views/Leave/Index.cshtml
+++ b/StarProject/Views/Leave/Index.cshtml
@@ -286,7 +286,7 @@
 
             <div class="form-buttons">
                 <button type="submit" class="btn btn-submit" id="submitBtn">📤 送出申請</button>
-                <a href="@Url.Action("Index", "Attendance")" class="btn btn-back">🔙 回到打卡頁面</a>
+                <a href="@Url.Action("Index", "Home")" class="btn btn-back">🔙 回到首頁</a>
             </div>
         </form>
     </div>
