--- a/StarProject/Views/Shared/_Layout.cshtml
+++ b/StarProject/Views/Shared/_Layout.cshtml
@@ -314,7 +314,7 @@
                         </li> *@
 
                         <!-- 新手指南 -->
-                        <li class="nav-item">
+                        <li class="nav-item mt-1">
                             <a class="nav-link" data-bs-toggle="tooltip" data-bs-placement="bottom"
                                data-bs-title="如有疑問，請洽資訊技術部" data-bs-trigger="hover">
                                 <i class="fa-solid fa-circle-question fs-4"></i>
