--- a/StarProject/Views/Events/Edit.cshtml
+++ b/StarProject/Views/Events/Edit.cshtml
@@ -183,7 +183,7 @@
 
                     <!-- 右欄：圖片上傳 -->
                     <div class="card mt-3">
-                        <div class="card-header"><strong>變更圖片</strong></div>
+                        <div class="card-header"><strong>變更圖片（無需變更可留空）</strong></div>
                         <div class="card-body">
                             <div class="input-group">
                                 <input asp-for="ImageFile" id="ImageFile" class="form-control" type="file" accept="image/*">
