--- a/StarProject/Views/Participants/Index.cshtml
+++ b/StarProject/Views/Participants/Index.cshtml
@@ -13,7 +13,7 @@
 <div class="d-flex align-items-center justify-content-between mb-3">
     <h1 class="fw-bold text-black">報名管理</h1>
     <div class="d-flex gap-2 flex-wrap">
-        <button type="button" class="btn btn-warning text-dark"
+        <button type="button" class="btn btn-warning text-dark fw-bold"
                 data-bs-toggle="modal" data-bs-target="#createParticipantModal">
             <i class="fi fi-sr-alien"></i> 新增
         </button>
